--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </head>
-<body>
-    
+<body>    
+    <div class="Main">
+        <h2>BalancedBliss</h2>
+        <h4>Balance your day with movement, nourishment, and rest.</h4>
+        <div class="card-top">
+            <p>Hidup sehat adalah kunci untuk mencapai kesejahteraan fisik, mental, dan emosional. Untuk menjaga kesehatan, penting untuk mengonsumsi makanan bergizi seimbang, rutin berolahraga, tidur yang cukup, serta menjaga hidrasi tubuh. Selain itu, mengelola stres dengan baik dan menjaga kesehatan mental melalui kegiatan relaksasi, meditasi, atau hobi juga tak kalah penting. Menjauhi kebiasaan buruk seperti merokok dan mengurangi konsumsi alkohol dapat memperpanjang usia dan meningkatkan kualitas hidup. Dengan menjaga keseimbangan antara tubuh dan pikiran, kita dapat menjalani hidup yang lebih bugar dan bahagia.</p>
+        </div>
+    </div>
 </body>
 </html>
