--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,38 @@
     <script src="script.js"></script>
 </head>
 <body>    
+    <!-- HEADER  -->
+    <header class="header">
 
+        <a href="#" class="logo"> Healty Living</a>
+
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#getstarted">Get Stared</a>
+            <a href="#diet">Diet</a>
+            <a href="#workout">Workout</a>
+            <a href="#resttime">Rest Time</a>
+        </nav>
+
+        <div class="fas fa-bars" id="menu">
+            
+        </div>
+
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     <!-- HEADER END -->
 </body>
 </html>
