about udah kelar

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BalancedBliss</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -18,7 +18,7 @@
     <!-- HEADER  -->
     <header class="header">
 
-        <a href="#" class="logo"> Healty Living</a>
+        <a href="#" class="logo"> BalancedBliss</a>
 
         <nav class="navbar">
             <a href="#home">Home</a>
@@ -29,24 +29,44 @@
         </nav>
 
         <div class="fas fa-bars" id="menu">
-            
+
         </div>
 
     </header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
      <!-- HEADER END -->
+
+     <!-- home section start -->
+
+     <section class="home" id="home">
+
+        <div class="content">
+            <h3>Welcome to the place for you to get Healty</h3>
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+     </section>
+     <!-- Home end -->
+
+     <!-- About start -->
+      <section class="about" id="about">
+
+        <h1 class="heading">About us</h1>
+
+            <div class="row">
+
+                <div class="content">
+                    <h3>Our Goal Is To Make You healthier for a better tomorrow</h3>
+                    <p>Hidup sehat adalah kunci untuk mencapai kesejahteraan fisik, mental, dan emosional. Untuk menjaga kesehatan, penting untuk mengonsumsi makanan bergizi seimbang, rutin berolahraga, tidur yang cukup, serta menjaga hidrasi tubuh. Selain itu, mengelola stres dengan baik dan menjaga kesehatan mental melalui kegiatan relaksasi, meditasi, atau hobi juga tak kalah penting. Menjauhi kebiasaan buruk seperti merokok dan mengurangi konsumsi alkohol dapat memperpanjang usia dan meningkatkan kualitas hidup. Dengan menjaga keseimbangan antara tubuh dan pikiran, kita dapat menjalani hidup yang lebih bugar dan bahagia.</p>
+                    <a href="#" class="btn">Read More</a>
+                </div>
+
+                <div class="image">
+                    <img src="img\BalancedBliss.png" alt="">
+                </div>
+
+
+        </div>
+      </section>
 </body>
 </html>
