--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
 
         <nav class="navbar">
             <a href="#home">Home</a>
-            <a href="#getstarted">Get Stared</a>
+            <a href="#about">About</a>
             <a href="#diet">Diet</a>
             <a href="#workout">Workout</a>
             <a href="#resttime">Rest Time</a>
@@ -68,5 +68,25 @@
 
         </div>
       </section>
+
+      <!-- BUAT DIET -->
+
+      <!-- Diet End -->
+
+      <!-- Workout Start -->
+    
+      <section class="workout" id="workout">
+
+        <h1 class="heading">Workout</h1>
+
+        <ul class="controls">
+            <li class="buttons" data-filter="all">
+                
+            </li>
+        </ul>
+
+      </section>
+
+      <!-- Workout end -->
 </body>
 </html>
