--- a/Index.html
+++ b/Index.html
@@ -69,24 +69,80 @@
         </div>
       </section>
 
-      <!-- BUAT DIET -->
+       <!-- tips -->
 
-      <!-- Diet End -->
+    <section class="tips" id="tips">
 
-      <!-- Workout Start -->
-    
-      <section class="workout" id="workout">
-
-        <h1 class="heading">Workout</h1>
+        <h1 class="heading">tips for healthy lifestyle</h1>
 
         <ul class="controls">
-            <li class="buttons" data-filter="all">
-                
+            <li class="buttons active" data-filter="all">
+                <img src="images/globe.png" alt="">
+                <h3>all</h3>
+            </li>
+            <li class="buttons" data-filter="sport">
+                <img src="images/dumbbell.png" alt="">
+                <h3>sport</h3>
+            </li>
+            <li class="buttons" data-filter="diet">
+                <img src="images/diet.png" alt="">
+                <h3>diet</h3>
+            </li>
+            <li class="buttons" data-filter="rest">
+                <img src="images/sleep.png" alt="">
+                <h3>rest</h3>
             </li>
         </ul>
 
-      </section>
+        <div class="image-container">
 
-      <!-- Workout end -->
+            <div class="box sport">
+                <div class="image">
+                    <img src="images/jog.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="link">Testing123456</a>
+                    <p>Lorem ipsum ayayaya</p>
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box diet">
+                <div class="image">
+                    <img src="images/salad.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="link">Testing123456</a>
+                    <p>Lorem ipsum ayayaya</p>
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box rest">
+                <div class="image">
+                    <img src="images/restbook.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="link">Testing123456</a>
+                    <p>Lorem ipsum ayayaya</p>
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <!-- tips end-->
 </body>
 </html>
