commit reason isi tips fixing code dll

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#diet">Diet</a>
+            <a href="#tips">Tips</a>
             <a href="#workout">Workout</a>
             <a href="#resttime">Rest Time</a>
         </nav>
@@ -62,12 +62,40 @@
                 </div>
 
                 <div class="image">
-                    <img src="img\BalancedBliss.png" alt="">
+                    <img src="images\BalancedBliss.png" alt="">
                 </div>
 
 
         </div>
       </section>
+
+      <!-- About end -->
+
+
+      <!-- Reason start -->
+
+      <section class="reason" id="reason">
+        
+        <h1 class="heading">Reason for Healthy Lifestyle</h1>
+
+        <div class="row">
+
+            <div class="content">
+                <p>Hidup sehat penting karena menjaga tubuh tetap bugar, meningkatkan energi, dan memperkuat sistem kekebalan. Pola hidup sehat juga mencegah penyakit kronis, memperpanjang usia, serta meningkatkan kesejahteraan mental, membuat kita lebih produktif dan bahagia dalam menjalani aktivitas sehari-hari.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="image">
+                <img src="images\reason.jpg" alt="">
+            </div>
+
+
+        </div>
+      </section>
+
+      <!-- Reason end -->
+
+
 
        <!-- tips -->
 
@@ -76,11 +104,11 @@
         <h1 class="heading">tips for healthy lifestyle</h1>
 
         <ul class="controls">
-            <li class="buttons active" data-filter="all">
+            <!-- <li class="buttons active" data-filter="all">
                 <img src="images/globe.png" alt="">
                 <h3>all</h3>
-            </li>
-            <li class="buttons" data-filter="sport">
+            </li> -->
+            <li class="buttons active" data-filter="sport">
                 <img src="images/dumbbell.png" alt="">
                 <h3>sport</h3>
             </li>
@@ -115,11 +143,40 @@
                     <img src="images/salad.jpg" alt="">
                 </div>
                 <div class="content">
-                    <a href="#" class="link">Testing123456</a>
-                    <p>Lorem ipsum ayayaya</p>
+                    <a href="#" class="link">salad</a>
+                    <p>Memakan salad mendukung hidup sehat dengan memberikan serat, vitamin, dan mineral, membantu pencernaan, menjaga berat badan, meningkatkan energi, serta memperkuat sistem kekebalan tubuh.</p>
                     <div class="icon">
                         <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
-                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        <a href="#"><i class="fas fa-user"></i> by jason adriankho</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Saat copy kalo misal gambarnya ancur, itu berarti ada div yang kelebihan satu, jadi itu lu delete aja-->
+            <div class="box diet">
+                <div class="image">
+                    <img src="images/salad.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="link">salad</a>
+                    <p>Memakan salad mendukung hidup sehat dengan memberikan serat, vitamin, dan mineral, membantu pencernaan, menjaga berat badan, meningkatkan energi, serta memperkuat sistem kekebalan tubuh.</p>
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by jason adriankho</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box diet">
+                <div class="image">
+                    <img src="images/salad.jpg" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="link">salad</a>
+                    <p>Memakan salad mendukung hidup sehat dengan memberikan serat, vitamin, dan mineral, membantu pencernaan, menjaga berat badan, meningkatkan energi, serta memperkuat sistem kekebalan tubuh.</p>
+                    <div class="icon">
+                        <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by jason adriankho</a>
                     </div>
                 </div>
             </div>
@@ -144,5 +201,9 @@
     </section>
 
     <!-- tips end-->
+
+
+
+
 </body>
 </html>
