--- a/Index.html
+++ b/Index.html
@@ -23,8 +23,8 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#reason">Reason</a>
             <a href="#tips">Tips</a>
-            <a href="#workout">Workout</a>
             <a href="#resttime">Rest Time</a>
         </nav>
 
