--- a/Index.html
+++ b/Index.html
@@ -252,7 +252,7 @@
                             kalori saat istirahat, mendukung pencapaian target kebugaran Anda.</p>                
                     <div class="icon">
                         <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
-                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        <a href="#"><i class="fas fa-user"></i> by Adidtiya kurniawan</a>
                     </div>
                 </div>
             </div>
