--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
 
                 <div class="content">
                     <h3>Our Goal Is To Make You healthier for a better tomorrow</h3>
-                    <p>Hidup sehat adalah kunci untuk mencapai kesejahteraan fisik, mental, dan emosional. Untuk menjaga kesehatan, penting untuk mengonsumsi makanan bergizi seimbang, rutin berolahraga, tidur yang cukup, serta menjaga hidrasi tubuh. Selain itu, mengelola stres dengan baik dan menjaga kesehatan mental melalui kegiatan relaksasi, meditasi, atau hobi juga tak kalah penting. Menjauhi kebiasaan buruk seperti merokok dan mengurangi konsumsi alkohol dapat memperpanjang usia dan meningkatkan kualitas hidup. Dengan menjaga keseimbangan antara tubuh dan pikiran, kita dapat menjalani hidup yang lebih bugar dan bahagia.</p>
+                    <p>Website ini dibuat dengan tujuan Mengarahkan anda dalam gaya hidup yang lebih sehat demi masa depan yang lebih baik. Website kami ini memberikan tips tips yang berguna agar anda dapat merubah gaya hidup anda. Investasikan masa depanmu dengan gaya hidup sehat. Dapatkan motivasi dan dukungan yang kamu butuhkan untuk mencapai versi terbaik dirimu.</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
 
@@ -120,17 +120,60 @@
 
             <div class="box sport">
                 <div class="image">
-                    <img src="images/jog.jpg" alt="">
+                    <img src="images\compilation2.png" alt="">
                 </div>
                 <div class="content">
-                    <a href="#" class="link">Testing123456</a>
-                    <p>Lorem ipsum ayayaya</p>
+                    <a href="#" class="link">Workout</a>
+                    <p>Workout adalah kegiatan latihan fisik yang dilakukan dengan tujuan meningkatan kebugaran, kesehatan, kekuatan, atau performa tubuh. Contoh Jenis jenis wrokout yang dapat dilakukan dengan mudah adalah Cardio, Gym Workout, calisthenics.</p>
+
+                    <h1 class="heading" style="color: #f5a623">Healthy Body for a Healthy Lifestyle</h1>
+
+                        <p>Olahraga perlu dimasukan dalam kehidupan kita agar kita tidak mudah terkena penyakit dan juga meningkatan kekuatan tubuh. Olahraga juga dapat dilakukan dengan mudah terutama Cardio dan Calisthenics. salah satu olahraga yang dapat dilakukan untuk membentuk tubuh adalah Gym Workout yang dapat dilakukan di-gym.</p>      
+                        <br>
+                        <h2>Cardio</h2>
+                        <br>
+                        <p>Cardio adalah aktifitas fisik yang meningkatkan detak jantung dan sirkulasi darah dalam tubuh. Latihan kardio biasanya dikenal dengan latihan untuk menurunkan berat badan. kardio juga biasanya dirancang untuk meningkatkan kesehatan jantung, daya tahan tubuh.</p>
+                        <br>
+                        <h2>Contoh Olahraga Cardio:</h2>
+                        <br>
+                        <ul>
+                            <li><strong>Jogging:</strong> Jogging adalah olahraga termudah dan dapat dilakukan kapanpun. olahraga ini dapat dilakukan dengan berlari dengan kecapatan rendah sehingga. olahraga ini dapat di lakukan oleh semua umur.</li>
+                            <li><strong>Bersepeda</strong> Bersepeda adalah salah satu olahraga dengan mengoes pedal untuk menggerakan. Bersepeda ini merupakan kegiatan untuk kesehatan jantung, membakar kalori, serta memperkuat otot-kaki dan inti tubuh.</li>
+                            <li><strong>Berenang:</strong> Berenang adalah kegiatan fisik yang dilakukan dengan cara menggerakan tubuh dalam air. Olahraga ini merupakan kegiatan ototubuh untuk meningkatkan kekuatan,daya tahan tubuh.</li>
+                            <li><strong>Senam:</strong> Senam adalah gerakan tubuh tertentu secara sistematis dan teratur untuk mencapai tujuan tertentu. Senam biasanya diiringi Lagu dan menyesuaikan dengan irama. Olahraga ini direkomendasikan untuk orang lanjut usia.</li>
+                        </ul>
+                        <br>
+                        <h2>Calisthenics</h2>
+                        <br>
+                        <p>Calisthenics adalah latihan fisik yang menggunakan berat badan sendiri sebagai resistensi untuk memperkuat otot, meningkatkan fleksibilitas dan Keseimbangan. Latihan Calisthenics ini tidak memerlukan alat apapun dan dapat dilakukan di mana saja.</p>
+                        <br>
+                        <h2>Contoh Olahraga Calisthenics:</h2>
+                        <br>
+                        <ul>
+                            <li><strong>Push-up</strong> Push-up adalah olahraga yang melibatkan otot dada. Olahraga ini dilakukan dengan meletakan tubuh dalam posisi terlentang, lalu meletakan tangan dilantai lalu mendorong tubuh keatas. olahraga ini menargetkan otot dada, triceps dan biceps.</li>
+                            <li><strong>Sit-up</strong> Sit-up adalah olahraga yang memperkuat otot perut. Dalam gerakan sit-up, seseorang berbaring telentang dengan lutut ditekuk, lalu mengangkat tubuh bagian atas (punggung dan bahu) dari lantai menuju lutut, dan kemudian kembali ke posisi awal.</li>
+                            <li><strong>Plank</strong> Plank adalah olahraga tubuh yang menargetkan otot perut. Kegiatan ini diperuntukan untuk mempererat otot tubuh. Plank dilakukan dengan menahan tubuh dalam posisi mirip push-up, tetapi tanpa gerakan dinamis.</li>
+                            <li><strong>Squat</S></strong> Squat adalah  kekuatan yang melibatkan otot-otot kaki, terutama quadriceps, hamstrings, dan glutes. Ketika melakukan squat, Anda akan menekuk lutut dan menurunkan tubuh Anda seolah-olah sedang duduk, lalu kembali ke posisi berdiri.</li>
+                        </ul>
+                        <br>
+                        <h2>Gym Workout</h2>
+                        <br>
+                        <p>Gym Workout adalah olahraga yang dilakukan di gym dengan tujuan membentuk badan dan membangun kekuatan tubuh. Gym Workout Berfokus kepada alat alat yang digunakan seperti: Dumbell, Barbell, Dan mesin-mesin (Cable Machine, Leg press machine).</p>
+                        <br>
+                        <h2>Contoh Alat Gym Workout:</h2>
+                        <br>
+                        <ul>
+                            <li><strong>Dumbell</strong> Dumbbell adalah alat latihan yang terdiri dari dua bola besi yang dihubungkan oleh sebuah batang. Dumbbell biasanya digunakan untuk melakukan latihan kekuatan dan ketahanan.Dumbell biasa digunakan untuk latihan Biceps, Shoulder, dan legs.</li>
+                            <li><strong>Barbell</strong> Barbell adalah peralatan olahraga yang terdiri dari sebuah batang logam lurus dengan dua ujung yang dapat diberi beban. Beban ini biasanya berupa piringan besi yang dapat ditambahkan atau dikurangi sesuai dengan intensitas latihan yang diinginkan.Kegiatan ini biasa dilakukan untuk olahraga kaki dan shoulder.</li>
+                            <li><strong>Cable Machine</strong> Cable Machine adalah alat latihan yang menggunakan sistem kabel untuk memberikan resistensi terhadap gerakan tubuh. Kabel ini terhubung ke sebuah tumpukan berat yang dapat disesuaikan, sehingga Anda dapat mengatur tingkat kesulitan latihan. Alat ini dapat menargetkan semua otot dalam tubuh.</li>
+                        </ul>
                     <div class="icon">
                         <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
-                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        <a href="#"><i class="fas fa-user"></i> Galang</a>
                     </div>
                 </div>
             </div>
+
 
             <div class="box diet">
                 <div class="image">
