--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
 
         <div class="content">
             <h3>Welcome to the place for you to get Healty</h3>
-            <a href="#" class="btn">Read More</a>
+            <a href="#about" class="btn">Read More</a>
         </div>
 
      </section>
@@ -57,7 +57,7 @@
                 <div class="content">
                     <h3>Our Goal Is To Make You healthier for a better tomorrow</h3>
                     <p>Website ini dibuat dengan tujuan Mengarahkan anda dalam gaya hidup yang lebih sehat demi masa depan yang lebih baik. Website kami ini memberikan tips tips yang berguna agar anda dapat merubah gaya hidup anda. Investasikan masa depanmu dengan gaya hidup sehat. Dapatkan motivasi dan dukungan yang kamu butuhkan untuk mencapai versi terbaik dirimu.</p>
-                    <a href="#" class="btn">Read More</a>
+                    <a href="#reason" class="btn">Read More</a>
                 </div>
 
                 <div class="image">
@@ -85,7 +85,7 @@
 
             <div class="content">
                 <p>Hidup sehat penting karena menjaga tubuh tetap bugar, meningkatkan energi, dan memperkuat sistem kekebalan. Pola hidup sehat juga mencegah penyakit kronis, memperpanjang usia, serta meningkatkan kesejahteraan mental, membuat kita lebih produktif dan bahagia dalam menjalani aktivitas sehari-hari.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#tips" class="btn">Read More</a>
             </div>
 
         </div>
