--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,12 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body>    
@@ -25,6 +30,7 @@
             <a href="#about">About</a>
             <a href="#reason">Reason</a>
             <a href="#tips">Tips</a>
+            <a href="#reviews">review</a>
         </nav>
 
         <div class="fas fa-bars" id="menu">
@@ -306,7 +312,84 @@
     </section>
 
     <!-- tips end-->
+
+    
 </section>
+
+   <!-- review -->
+   <section class="reviews" id="reviews">
+
+    <h1 class="heading">Client's reviews</h1>
+    <div class="swiper review-slider">
+
+        <div class="swiper-wrapper">
+
+            <div class="swiper-slide slide">
+                <p>Nice Website guys ayaka ayama ayala akoko</p>
+                <div class="user">
+                    <img src="images/movie.png" alt="">
+                    <div class="info">
+                        <h3>john deo</h3>
+                        <span>Client</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide">
+                <p>Nice Website guys ayaka ayama ayala akoko</p>
+                <div class="user">
+                    <img src="images/movie.png" alt="">
+                    <div class="info">
+                        <h3>john deo</h3>
+                        <span>Client</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide">
+                <p>Nice Website guys ayaka ayama ayala akoko</p>
+                <div class="user">
+                    <img src="images/movie.png" alt="">
+                    <div class="info">
+                        <h3>john deo</h3>
+                        <span>Client</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide">
+                <p>Nice Website guys ayaka ayama ayala akoko</p>
+                <div class="user">
+                    <img src="images/movie.png" alt="">
+                    <div class="info">
+                        <h3>john deo</h3>
+                        <span>Client</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide">
+                <p>Nice Website guys ayaka ayama ayala akoko</p>
+                <div class="user">
+                    <img src="images/movie.png" alt="">
+                    <div class="info">
+                        <h3>john deo</h3>
+                        <span>Client</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+</section>
+
+
+<!-- review end-->
+
 
 
 
