--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     </style>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -390,7 +390,56 @@
 
 <!-- review end-->
 
+<!-- footer-->
 
+<section class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#home"><i class="fas fa-arrow-right"></i>home</a>
+            <a href="#about"><i class="fas fa-arrow-right"></i>about</a>
+            <a href="#reason"><i class="fas fa-arrow-right"></i>reason</a>
+            <a href="#tips"><i class="fas fa-arrow-right"></i>tips</a>
+            <a href="#reviews"><i class="fas fa-arrow-right"></i>review</a>
+        </div>
+
+        <div class="box">
+            <h3>extra links</h3>
+            <a href="#"><i class="fas fa-arrow-right"></i>my account</a>
+            <a href="#"><i class="fas fa-arrow-right"></i>my order</a>
+            <a href="#"><i class="fas fa-arrow-right"></i>my wishlist</a>
+            <a href="#"><i class="fas fa-arrow-right"></i>ask questions</a>
+            <a href="#"><i class="fas fa-arrow-right"></i>terms of use</a>
+            <a href="#"><i class="fas fa-arrow-right"></i>privacy policy</a>
+        </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#"><i class="fas fa-phone"></i>+123-456-7890</a>
+            <a href="#"><i class="fas fa-phone"></i>+123-280-9200</a>
+            <a href="#"><i class="fas fa-envelope"></i>balanced.bliss@gmail.com</a>
+            <a href="#"><i class="fas fa-map"></i>Jakarta, Tegalan -11480</a>
+        </div>
+
+        <div class="box">
+            <h3>follow us</h3>
+            <a href="#"><i class="fab fa-facebook-f"></i>facebook</a>
+            <a href="#"><i class="fab fa-twitter"></i>twitter</a>
+            <a href="#"><i class="fab fa-instagram"></i>instagram</a>
+            <a href="#"><i class="fab fa-linkedin"></i>linkedin</a>
+            <a href="#"><i class="fab fa-github"></i>github</a>
+        </div>
+
+    </div>
+
+    <div class="credit">created by | <span>jason adriankho</span> | <span>galang afdala harsa</span> | <span>adidtiya kurniawan</span> | all rights are reserved!</div>
+
+
+</section>
+
+<!--footer end-->
 
 
 
