--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
             <a href="#reviews">review</a>
         </nav>
 
-        <div class="fas fa-bars" id="menu">
+        <div class="fas fa-bars" id="menu-icon">
 
         </div>
 
