recoloring fixing format

--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
                     <a href="#" class="link">Workout</a>
                     <p>Workout adalah kegiatan latihan fisik yang dilakukan dengan tujuan meningkatan kebugaran, kesehatan, kekuatan, atau performa tubuh. Contoh Jenis jenis wrokout yang dapat dilakukan dengan mudah adalah Cardio, Gym Workout, calisthenics.</p>
 
-                    <h1 class="heading" style="color: #f5a623">Healthy Body for a Healthy Lifestyle</h1>
+                    <h1 class="heading">Healthy Body for a Healthy Lifestyle</h1>
 
                         <p>Olahraga perlu dimasukan dalam kehidupan kita agar kita tidak mudah terkena penyakit dan juga meningkatan kekuatan tubuh. Olahraga juga dapat dilakukan dengan mudah terutama Cardio dan Calisthenics. salah satu olahraga yang dapat dilakukan untuk membentuk tubuh adalah Gym Workout yang dapat dilakukan di-gym.</p>      
                         <br>
@@ -175,7 +175,7 @@
                         </ul>
                     <div class="icon">
                         <a href="#"><i class="fas fa-clock"></i> 18 september, 2024</a>
-                        <a href="#"><i class="fas fa-user"></i> Galang</a>
+                        <a href="#"><i class="fas fa-user"></i> By Galang Afdala</a>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                     <a href="#diet" class="link">healthy diet</a>
                     <p>Memakan makanan sehat sangat penting untuk menunjang gaya hidup sehat karena makanan bergizi memberikan tubuh nutrisi yang diperlukan untuk berfungsi dengan baik, memperkuat sistem kekebalan tubuh, meningkatkan energi, serta menjaga berat badan ideal. Pola makan sehat juga membantu mencegah berbagai penyakit kronis seperti diabetes, jantung, dan tekanan darah tinggi, serta mendukung kesehatan mental dan kesejahteraan secara keseluruhan.</p>
 
-                    <h1 class="heading" style="color: #f5a623">Healthy Diet for a Healthy Lifestyle</h1>
+                    <h1 class="heading">Healthy Diet for a Healthy Lifestyle</h1>
 
                         <p>Hidup sehat melibatkan pola makanan sehat yang berarti mengonsumsi berbagai makanan dalam proporsi yang tepat untuk mendapatkan nutrisi penting, menjaga berat badan yang ideal, dan meningkatkan kesehatan secara keseluruhan. Ini tidak hanya tentang memilih jenis makanan yang tepat, tetapi juga mengonsumsi mereka dalam jumlah yang tepat dan pada waktu yang tepat.</p>
                         <br>
@@ -245,7 +245,7 @@
                         tidur Anda. Dengan mengatur waktu istirahat yang seimbang, Anda dapat menjalani hidup yang lebih produktif
                         dan sehat.</p>
 
-                        <h1 class="heading" style="color: #f5a623">Rest Time for a Healthy Lifestyle</h1>
+                        <h1 class="heading">Rest Time for a Healthy Lifestyle</h1>
 
                         <p>Istirahat sama pentingnya dengan latihan. Hari istirahat memungkinkan tubuh pulih dan memperbaiki diri,
                             mendukung pertumbuhan otot, mencegah kelelahan, dan mengurangi risiko cedera. Tanpa istirahat, tubuh rentan
