added background video

--- a/Index.html
+++ b/Index.html
@@ -45,6 +45,11 @@
 
      <section class="home" id="home">
 
+        <video autoplay muted loop id="background-video">
+            <source src="images\y2mate.com - Running Stock Video_720p.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
         <div class="content">
             <h3>Welcome to the place for you to get Healty</h3>
             <a href="#about" class="btn">Read More</a>
